修改css的文件名

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 <title>Jomsou的空间</title>
 <meta name="description" content="Jomsou的个人空间站！">
 <meta name="keywords" content="Jomsou的个人空间站！">
-<link href="css/style.css" rel="stylesheet">
+<link href="CSS/style.css" rel="stylesheet">
 </head>
 <body>
     <!--页面头部-->    
