--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
             <div class="icon_ico">
                 <img src="images/03-02.jpg" alt="">
                 <div class="des2">鲜花</div>
-                <div class="des3">可以刺激我们的嗅觉</div>
+                <div class="des3">会刺激我们的嗅觉</div>
             </div> 
             <div class="icon_ico">
                 <img src="images/03-03.jpg" alt="">
