兼容性测试并做修改

--- a/index.html
+++ b/index.html
@@ -38,23 +38,22 @@
                 <img src="images/banner_04.jpg" alt="4" />
                 <img src="images/banner_05.jpg" alt="5" />
                 <img src="images/banner_01.jpg" alt="5" />
-        </div>
-        <div id="buttons">
-            <span index="1" class="on"></span>
-            <span index="2"></span>
-            <span index="3"></span>
-            <span index="4"></span>
-            <span index="5"></span>
-        </div>
-        <a href="javascript:;" id="prev" class="arrow">&lt;</a>
-        <a href="javascript:;" id="next" class="arrow">&gt;</a>
-    </div>
+            </div>
+            <div id="buttons">
+                <span index="1" class="on"></span>
+                <span index="2"></span>
+                <span index="3"></span>
+                <span index="4"></span>
+                <span index="5"></span>
+            </div>
+            <a href="javascript:;" id="prev" class="arrow">&lt;</a>
+            <a href="javascript:;" id="next" class="arrow">&gt;</a>
         </div>
         <!--联系我部分-->
         <div class="chatme" id="chatme">
             <div class="weibo">
                 <img src="images/weibo.png" alt="weibo">
-                <div class="des">微博</a></div>
+                <div class="des">微博</div>
             </div>
             <div class="weixin">
                 <img src="images/weixin.png" alt="weixin">
